<resources>
    <string name="app_name">KissanSMS</string>
    <string name="contacts">Contacts</string>
    <string name="messages">Messages</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="gender">Gender</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="send">SEND</string>
    <string name="sms">SMS</string>
    <string name="sending_to">Sending to :</string>
    <string name="hi_your_verification_code_is">Hi , Your Verification Code is</string>
    <string name="phone">Phone :</string>
    <string name="otp">OTP :</string>
    <string name="no_internet">No Internet..</string>
    <string name="your_verification_code">Hi , Your Verification Code is </string>
    <!--//Change With Your Text Local API-->
    <string name="text_local_api">Enter Your TextLocalAPI HERE</string>
    <string name="pull_from_up_to_refresh">Pull from up to Refresh</string>
</resources>
