<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_chevron_left_black_24dp"
                    tools:ignore="ContentDescription"
                    android:id="@+id/back_img"
                    tools:layout_editor_absoluteY="16dp"
                    tools:layout_editor_absoluteX="16dp"/>


        </android.support.v7.widget.Toolbar>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/toolBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/scrollView2">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="@string/company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView10"
                        android:layout_marginTop="24dp"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        app:layout_constraintTop_toBottomOf="@+id/tv_gender"
                        />

                <TextView
                        tools:text="Kissan Network"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_company"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        android:layout_marginTop="4dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView10"
                        />

                <TextView
                        android:text="@string/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:layout_marginTop="24dp"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        app:layout_constraintTop_toBottomOf="@+id/tv_email"/>

                <TextView
                        tools:text="male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_gender"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        android:layout_marginTop="4dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView8"/>

                <TextView
                        android:text="@string/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6"
                        android:layout_marginTop="24dp"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        app:layout_constraintTop_toBottomOf="@+id/tv_phone"/>

                <TextView
                        tools:text="happy@gmail.com"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_email"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        android:layout_marginTop="4dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView6"/>

                <TextView
                        android:id="@+id/name_icon"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:background="@drawable/bg_round_text"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        tools:text="Hs"
                        android:letterSpacing="0.1"
                        tools:ignore="UnusedAttribute"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toTopOf="@+id/tv_name"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="16dp"/>


                <TextView
                        tools:text="Happy Singh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_name"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
                        app:layout_constraintStart_toStartOf="@+id/name_icon"
                        app:layout_constraintEnd_toEndOf="@+id/name_icon"
                        android:textSize="20sp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/guideline"/>

                <android.support.constraint.Guideline
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/guideline"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_end="436dp"/>

                <TextView
                        android:text="@string/phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        android:layout_marginTop="32dp"
                        app:layout_constraintTop_toTopOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        />

                <TextView
                        tools:text="+91-9109248747"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_phone"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        android:layout_marginTop="4dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"/>

                <android.support.constraint.Guideline
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/guideline2"
                        app:layout_constraintGuide_begin="20dp"
                        android:orientation="vertical"/>

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

        <TextView
                android:text="@string/send_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_send_message"
                android:padding="15dp"
                android:background="@color/md_blue_grey_400"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>