<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        >

    <data>
        <import type="android.view.View"/>
        <variable
                name="state"
                type="com.androchef.kisansms.ui.sendmessage.SendMessageDialogState"/>
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    tools:text="+91-910924874"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_phone"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    android:layout_marginTop="4dp"/>

            <TextView
                    android:text="@string/sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_phone"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    tools:targetApi="lollipop"/>

            <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/sendmessage"
                    android:id="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:visibility="@{state.loading  ? View.INVISIBLE : View.VISIBLE}"
                    app:layout_constraintHorizontal_bias="0.433"
                    android:layout_marginTop="16dp"
                    tools:ignore="ContentDescription"/>

            <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    android:visibility="@{state.loading  ? View.VISIBLE : View.GONE}"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    android:id="@+id/progressBar"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/message"
                    android:visibility="@{state.loading  ? View.VISIBLE : View.GONE}"
                    android:text="@{state.message}"
                    app:layout_constraintStart_toStartOf="@+id/progressBar"
                    app:layout_constraintEnd_toEndOf="@+id/progressBar"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/progressBar"/>

            <TextView
                    android:text="@string/sending_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    tools:targetApi="lollipop"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:text="@string/hi_your_verification_code_is"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    android:layout_marginTop="4dp"/>

            <TextView
                    tools:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_otp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    android:layout_marginTop="4dp"/>

            <TextView
                    android:text="Cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_otp_send_cancel"
                    android:textSize="17sp"
                    android:padding="10dp"
                    android:textColor="@color/md_indigo_400"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="@+id/btn_otp_send"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>

            <TextView
                    android:text="Send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_otp_send"
                    android:textSize="17sp"
                    android:padding="10dp"
                    android:textColor="@color/md_indigo_400"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_otp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/btn_otp_send_cancel"/>


        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
</layout>